--- a/src/input.css
+++ b/src/input.css
@@ -11,7 +11,7 @@
     }
 
     .Ifeanyi {
-        @apply border border-gray-500 py-2 px-4 rounded-full ml-4
+        @apply border border-gray-500 py-2 px-4 rounded-md ml-2
     }
 
 
