--- a/src/input.css
+++ b/src/input.css
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap'); */
 
 
 
